page flight payment step 5

--- a/app/flight-payment-step-1.html
+++ b/app/flight-payment-step-1.html
@@ -31,7 +31,7 @@
       <div class="wrapping-gray"></div>
       <div class="container display-table">
         <div class="content-left display-cell p-t-70 b-r">
-          <div class="flight-payment-step-1">
+          <div class="flight-payment-step-1 m-b-xl">
             <form action="flight-payment-step-2.html" class="sapta-form booking booking-flight">
               <h4 class="section-title m-t-none m-b-lg text-c-l text-left text-rounded">Contact&nbsp;<span class="text-yellow">Details</span></h4>
               <div class="form-group">
@@ -158,7 +158,7 @@
                   <div class="clearfix"></div>
                 </div>
                 <div class="dashed m-t-lg m-b-lg"></div>
-              </div>;
+              </div>
               <div id="passenger-2" class="form-group passenger-info">
                 <h4 class="section-title m-t-none m-b-lg text-c-l text-left text-rounded">Adult Passenger 02&nbsp;<span class="text-yellow">Details</span></h4>
                 <p><strong class="f-bold">Perhatian:</strong> Nama pernumpang rute International harus tepat dan sesuai Paspor, sedangkan domestik dapat<strong class="f-bold"> sesuai</strong> KTP/SIM/Paspor. Data Penumpang tidak dapat diubah setelah halaman berpindah</p>
@@ -267,19 +267,19 @@
                   <div class="clearfix"></div>
                 </div>
                 <div class="dashed m-t-lg m-b-lg"></div>
-              </div>;<a href="#" id="btnAddMorePassenger" class="pull-left block btn-white text-c-l btn"><span class="block pull-left m-r-sm">+</span><strong class="block pull-right"> Add More Passenger</strong></a>
+              </div><a href="#" id="btnAddMorePassenger" class="pull-left block btn-white text-c-l btn"><span class="block pull-left m-r-sm">+</span><strong class="block pull-right"> Add More Passenger</strong></a>
               <button type="submit" class="btn btn-primary btn-submit pull-right m-b-lg">Continue</button>
               <div class="clearfix"></div>
             </form>
             <div class="wrapper-lg m-t-lg ssl-message">
-              <div class="m-l-n-xl m-b-xl"><img src="img/ssl-image.png" alt="" class="block pull-left m-l-n-xs">
+              <div class="m-l-n-xl"><img src="img/ssl-image.png" alt="" class="block pull-left m-l-n-xs">
                 <p class="pull-left block m-l-md">Sapta Tour selalu mementingkan keamanan transaksi Anda. Semua transaksi melalui Saptatour.com dijamin 100% aman</p>
                 <div class="clearfix"></div>
               </div>
             </div>
           </div>
         </div>
-        <div class="aside display-cell p-t-70">
+        <div class="aside display-cell p-t-70 m-b-md">
           <h5 class="m-t-xs m-b-lg text-rounded">Flight Details</h5>
           <ul class="list-unstyled tour-ticket outbound-flight">
             <li class="text-left"><span class="block m-l-md text-md">Outbound Flight</span></li>
@@ -292,7 +292,7 @@
             <li class="bg-white airline"><img src="img/icon_airasia.png" width="30" class="inline m-r-sm"><span class="inline">Air Asia QZ 888h</span></li>
             <li class="bg-white"><i class="ico ico-chair"></i><span class="inline">Economy</span></li>
             <li class="bg-white"><i class="ico ico-adult"></i><span class="inline"><span id="count-adult">2</span> Person</span></li>
-            <li class="bg-white"><i class="ico ico-bag"></i><span class="inline">Economy</span></li>
+            <li class="bg-white"><i class="ico ico-bag"></i><span class="inline">20 Kg</span></li>
           </ul>
           <ul class="list-unstyled tour-ticket inbound-flight m-t-md">
             <li class="text-left"><span class="block m-l-md text-md">Outbound Flight</span></li>
@@ -312,7 +312,7 @@
             <li class="bg-white airline"><img src="img/icon_airasia.png" width="30" class="inline m-r-sm"><span class="inline">Air Asia QZ 888h</span></li>
             <li class="bg-white"><i class="ico ico-chair"></i><span class="inline">Economy</span></li>
             <li class="bg-white"><i class="ico ico-adult"></i><span class="inline"><span id="count-adult">2</span> Person</span></li>
-            <li class="bg-white"><i class="ico ico-bag"></i><span class="inline">Economy</span></li>
+            <li class="bg-white"><i class="ico ico-bag"></i><span class="inline">20 Kg</span></li>
           </ul>
           <ul class="list-unstyled tour-pricing m-t-lg">
             <li><span class="block text-md">Total Price</span></li>
