--- a/app/flight-payment-step-2.html
+++ b/app/flight-payment-step-2.html
@@ -27,8 +27,106 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="flight-payment step-2 p-t-70">
-      <p></p>
+    <div class="booking-page flight-payment">
+      <div class="wrapping-gray"></div>
+      <div class="container display-table">
+        <div class="content-left display-cell p-t-70 b-r">
+          <div class="flight-payment-step-2">
+            <div class="m-b-md"><img src="img/ico-big-check.png" alt="" class="inline m-r-sm"><span class="inline">Harga telah dikonfirmasi. Periksa kembali pesanan anda lalu klik tombol&nbsp;<strong class="f-bold">Continue To Payment</strong></span></div>
+            <div class="dashed clearfix"></div>
+            <h4 class="section-title m-t-lg m-b-lg text-c-l text-left text-rounded">Flights&nbsp;<span class="text-yellow">Details</span></h4>
+            <div class="aside m-b-md">
+              <ul class="list-unstyled tour-ticket outbound-flight pull-left">
+                <li class="text-left"><span class="block m-l-md text-md">Outbound Flight</span></li>
+                <li class="bg-light bg-white schedule"><i class="ico ico-departure"></i><span class="time block">13.00 PM</span><span class="block">Kamis,&nbsp;<strong class="f-bold">12 Feb ‘15</strong></span>
+                  <label class="text-u-c">Jakarta (CGK)</label>
+                </li>
+                <li class="bg-light bg-white schedule"><i class="ico ico-return"></i><span class="time block">16.00 PM</span><span class="block">Kamis,&nbsp;<strong class="f-bold">12 Feb ‘15</strong></span>
+                  <label class="text-u-c">Denpasar (DPS)</label>
+                </li>
+                <li class="bg-white airline"><img src="img/icon_airasia.png" width="30" class="inline m-r-sm"><span class="inline">Air Asia QZ 888h</span></li>
+                <li class="bg-white"><i class="ico ico-chair"></i><span class="inline">Economy</span></li>
+              </ul>
+              <ul class="list-unstyled tour-ticket inbound-flight pull-left m-l-md">
+                <li class="text-left"><span class="block m-l-md text-md">Outbound Flight</span></li>
+                <li class="bg-light bg-white schedule"><i class="ico ico-departure"></i><span class="time block">13.00 PM</span><span class="block">Kamis,&nbsp;<strong class="f-bold">22 Feb ‘15</strong></span>
+                  <label class="text-u-c">Denpasar (DPS)</label>
+                </li>
+                <li class="bg-light bg-white schedule"><i class="ico ico-return"></i><span class="time block">16.00 PM</span><span class="block">Kamis,&nbsp;<strong class="f-bold">22 Feb ‘15</strong></span>
+                  <label class="text-u-c">Jakarta (CGK)</label>
+                </li>
+                <li class="bg-white"><i class="ico ico-marker"></i><span class="inline">Transit: Surabaya</span></li>
+                <li class="bg-light bg-white schedule"><i class="ico ico-departure"></i><span class="time block">13.00 PM</span><span class="block">Kamis,&nbsp;<strong class="f-bold">22 Feb ‘15</strong></span>
+                  <label class="text-u-c">Denpasar (DPS)</label>
+                </li>
+                <li class="bg-light bg-white schedule"><i class="ico ico-return"></i><span class="time block">16.00 PM</span><span class="block">Kamis,&nbsp;<strong class="f-bold">22 Feb ‘15</strong></span>
+                  <label class="text-u-c">Jakarta (CGK)</label>
+                </li>
+                <li class="bg-white airline"><img src="img/icon_airasia.png" width="30" class="inline m-r-sm"><span class="inline">Air Asia QZ 888h</span></li>
+                <li class="bg-white"><i class="ico ico-chair"></i><span class="inline">Economy</span></li>
+              </ul>
+              <div class="clearfix"></div>
+            </div>
+            <div class="dashed clearfix"></div>
+            <h4 class="section-title m-t-xl m-b-lg text-c-l text-left text-rounded">Passenger&nbsp;<span class="text-yellow">List</span></h4>
+            <div class="passenger-list">
+              <div class="passenger-item m-b-md">
+                <div class="column name pos-rlt"><span class="block number">01</span>
+                  <label class="text-u-c">ADULT</label><span class="block f-bold">Miss Esperanza Kumala Wendyono</span>
+                </div>
+                <div class="column passport b-l b-r">
+                  <label class="text-u-c">PASSPORT NO.</label><span class="block">A D78JKI</span>
+                </div>
+                <div class="column bod b-r">
+                  <label class="text-u-c">DATE OF BIRTH</label><span class="block">21 Aug 1985</span>
+                </div>
+                <div class="column baggage">
+                  <label class="text-u-c">BAGGAGE</label><span class="block">0kg + 20kg</span>
+                </div>
+              </div>
+              <div class="passenger-item m-b-md">
+                <div class="column name pos-rlt"><span class="block number">02</span>
+                  <label class="text-u-c">ADULT</label><span class="block f-bold">Mr Alexander Adijana</span>
+                </div>
+                <div class="column passport b-l b-r">
+                  <label class="text-u-c">PASSPORT NO.</label><span class="block">A P78JKI</span>
+                </div>
+                <div class="column bod b-r">
+                  <label class="text-u-c">DATE OF BIRTH</label><span class="block">12 Mar 1985</span>
+                </div>
+                <div class="column baggage">
+                  <label class="text-u-c">BAGGAGE</label><span class="block">20kg + 20kg</span>
+                </div>
+              </div>
+            </div>
+            <div class="wrapper-lg m-t-lg ssl-message">
+              <div class="m-l-n-xl"><img src="img/ssl-image.png" alt="" class="block pull-left m-l-n-xs">
+                <p class="pull-left block m-l-md">Sapta Tour selalu mementingkan keamanan transaksi Anda. Semua transaksi melalui Saptatour.com dijamin 100% aman</p>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="aside display-cell p-t-70">
+          <ul class="list-unstyled bg-yellow">
+            <li class="text-md"><span class="wrapper block">Order Number&nbsp;<strong class="f-bold">378938</strong></span></li>
+          </ul>
+          <ul class="list-unstyled tour-pricing m-t-lg">
+            <li><span class="block text-md">Total Price</span></li>
+            <li><span class="block gray text-u-c">Air Asia</span><span class="block light pull-left">2 Adult</span><span><strong class="block pull-right">Rp 900.000</strong></span>
+              <div class="clearfix"></div>
+            </li>
+            <li><span class="block gray text-u-c">Air Asia</span><span class="block light pull-left">2 Adult</span><span><strong class="block pull-right">Rp 1.500.000</strong></span>
+              <div class="clearfix"></div>
+            </li>
+            <li><span class="block gray text-u-c">Luggage</span><span class="block light pull-left">20 Kg</span><span><strong class="block pull-right">Rp 100.000</strong></span>
+              <div class="clearfix"></div>
+            </li>
+            <li><span class="block gray text-u-c">Total Price</span><span class="block text-primary pricing"><span class="currency">Rp</span><span class="price"><span class="number">2,500,000</span></span></span></li>
+          </ul>
+          <p class="text-sm text-dark m-t-md m-b-xl">Dengan mengklik tombol di bawah, Anda menyetujui&nbsp;<a href="#" class="text-yellow">Syarat dan Ketentuan</a> dan&nbsp;<a href="#" class="text-yellow">Kebijakan Privasi</a> Saptatour.com<a href="flight-payment-step-3.html" class="btn btn-primary btn-submit btn-md pull-right m-b-lg text-md m-t-md">Continue To Payment</a></p>
+        </div>
+      </div>
     </div>
     <div class="footer">
       <div class="container">
