--- a/app/flight-payment-step-5.html
+++ b/app/flight-payment-step-5.html
@@ -27,8 +27,54 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="flight-payment step-5 p-t-70">
-      <p></p>
+    <div class="container p-t-70">
+      <div class="flight-payment-step-5 e-ticket">
+        <div class="ticket-header">
+          <div class="order-number pull-left"><span>Order No.</span><strong class="f-bold">3100020</strong></div>
+          <div class="departure pull-left">QZ 888H | CGK - DPS | Kamis, 12 Feb 2015</div>
+          <div class="return pull-left">QZ 8298 | DPS - CGK | Minggu, 16 Feb 2015</div>
+          <div class="clearfix"></div>
+        </div>
+        <h4 class="text-center section-title m-t-sm m-b-lg text-c-l text-left text-rounded">Status Penerbitan&nbsp;<span class="text-yellow">E-Ticket Anda</span></h4>
+        <p class="message-thank-you text-center">
+          <div class="m-l-xxl m-r-xxl text-center text-black">Terima kasih telah melakukan pemesana di Saptatour.com. Di bawah ini adalah status pemesanan Anda. Halaman ini akan diperbaharui secara otomatis. Mohon jangan tutup halaman ini sampai proses selesai.</div>
+          <div class="m-t-lg text-center block f-bold text-u-c text-md">Pemesanan Anda saat ini sedang dalam tahap:</div>
+        </p>
+        <div class="row m-t-lg">
+          <div class="col-md-8">
+            <div class="ticket-has-created">
+              <div class="pull-left"><img src="img/ico-big-check.png" alt=""></div>
+              <div class="pull-left m-l-md"><span class="block f-bold">E-Ticket anda telah diterbitkan!</span><span class="block">Mohon cek Inbox/Spam alamat email</span><span class="block"><strong class="f-bold">user@gmail.com</strong><span>&nbsp;untuk mendapatkan tiket Anda.</span></span></div>
+              <div class="clearfix"></div>
+            </div>
+          </div>
+          <div class="col-md-4 download-ticket text-center">
+            <p class="m-t-md">E-Ticket dapat juga diunduh disini:</p><a href="#" class="btn-download-e-ticket"><img src="img/btn-download-eticket.png" alt="Download E-Ticket"></a>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="tanda-bukti-pemesanan m-t-lg">
+          <h4 class="m-b-xl text-center section-title text-c-l text-left text-rounded">Tanda Bukti Pemesanan&nbsp;<span class="text-yellow">(Bukan Tiket)</span></h4>
+          <div class="pull-left info b-r"><strong class="f-bold">No. Pesanan</strong><span class="block m-t-xs">31000020</span><strong class="f-bold m-t-md block">Daftar Penumpang</strong>
+            <ol>
+              <li class="m-t-sm"><span class="block">Ms Esperanza Kumala Wendyono</span><span class="block">Jenis tiket: Dewasa</span></li>
+              <li class="m-t-md"><span class="block">Mr Alexander Adijana</span><span class="block">Jenis tiket: Dewasa</span></li>
+            </ol>
+          </div>
+          <div class="pull-left info right"><strong class="f-bold block m-b-sm">Info Penerbangan</strong>
+            <p><span class="block">Penerbangan:  Jakarta ke Denpasar (AirAsia)</span><span class="block">Tanggal:  Kamis, 12 Feb 2015 (Jam 13.00</span><span class="block m-t-md">Penerbangan:  Denpasar ke Jakarta (AirAsia)</span><span class="block">Tanggal:  Senin, 16 Feb 2015 (Jam 13.00</span></p>
+            <p class="m-t-lg"><strong class="f-bold block m-b-sm">Informasi Pembayaran</strong><span class="block">Harga total:  Rp 1,500,000</span><span class="block">Cara Pembayaran:  Kartu Kredit</span></p>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="m-t-lg m-b-xl message-customer-service">Jika mengalami kesulitan, Anda dapat menghubungi Customer Service 24 Hours kami di  021 270 2727 ataul email kami di&nbsp;<a href="#">callcentre@saptatours.com</a></div>
+        <div class="wrapper-lg m-t-lg ssl-message">
+          <div class="m-l-n-xl"><img src="img/ssl-image.png" alt="" class="block pull-left m-l-n-xs">
+            <p class="pull-left block m-l-md">Sapta Tour selalu mementingkan keamanan transaksi Anda. Semua transaksi melalui Saptatour.com dijamin 100% aman</p>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="footer">
       <div class="container">
