document page and flag assets

--- a/app/document.html
+++ b/app/document.html
@@ -62,7 +62,7 @@
               </div>
             </li>
             <li><a href="#hotels" class="hotel"><i class="ico ico-hotel"></i><span class="block">BOOK HOTELS</span></a></li>
-            <li><a href="document.html"><i class="ico ico-document"></i><span class="block">DOCUMENTS</span></a></li>
+            <li class="active"><a href="document.html"><i class="ico ico-document"></i><span class="block">DOCUMENTS</span></a></li>
             <li><a href="blog.html"><i class="ico ico-blog"></i><span class="block">BLOG</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -73,88 +73,89 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="booking-page">
-      <div class="wrapping-gray"></div>
-      <div class="container display-table">
-        <div class="content-left display-cell p-t-70 b-r">
-          <p class="m-b-lg"><strong class="f-bold">Perhatian:</strong> Harga yang tertera adalah sebagai perkiraan terdekat. Dengan menekan tombol Make Booking, Anda akan terdaftar sebagai peminat. Customer Service kami akan menghubungi Anda via telepon/Email. Transaksi akhir tidak dilakukan di website ini.</p>
-          <form class="sapta-form booking">
-            <h4 class="section-title m-t-sm m-b-lg text-c-l text-left text-rounded">Contact&nbsp;<span class="text-yellow">Details</span></h4>
-            <div class="form-group">
-              <div class="boxing name b m-t-md">
-                <label class="block text-xs">Name</label>
-                <input type="text" value="Anissa Sudirman">
+    <div class="document-page p-t-70">
+      <div class="banner">
+        <h2 class="head-title text-white text-center">Visa &amp; Documents</h2>
+      </div>
+      <div class="wrapping-gray">
+        <div class="container display-table">
+          <div class="content-left display-cell b-r">
+            <article>
+              <h3 class="text-rounded m-b-xl">Apa Itu&nbsp;<span class="text-yellow">Visa</span></h3>
+              <p>Visa adalah sebuah dokumen resmi yang Anda perlukan untuk masuk ke negara tujuan dalam periode waktu tertentu. Visa asli yang biasanya di stempel di paspor penerima sangat diperlukan jika Anda hendak berkunjung ke suatu negara tertentu.</p>
+              <p>Harap diperhatikan bahwa Visa kedatangan hanya dapat diperpanjang atas persetujuan Direktur Jenderal Imigrasi Republik Indonesia dalam hal bencana alam, sakit atau kecelakaan, tidak dapat dialihkan ke jenis visa lain. Pelancong yang melewati waktu yang telah ditentukan akan dikenakan denda sebesar US $ 20.- per hari / orang (untuk tinggal di bawah 60 hari) sedangkan lebih dari 60 hari tinggal akan menjalani 5 (lima) tahun hukuman penjara atau denda IDR 25.000.000 (mata uang lokal).</p>
+              <h5 class="text-u-c f-bold font-lg">Syarat-syarat visa</h5>
+              <p>Berikut beberapa syarat visa negara-negara tujuan wisata, bisnis maupun kebutuhan lainnya, Persyaratan visa dapat berubah sewaktu- waktu / bertambah sesuai dengan permintaan Kedutaan.</p>
+            </article>
+            <div class="flags-list row m-b-xl">
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/austria.png" alt=""><span class="inline f-bold m-l-md text-md">Austria</span></div>
               </div>
-              <div class="boxing phone-number b m-t-md m-r-md pull-left">
-                <label class="block text-xs">Phone Number</label>
-                <input type="text" value="" placeholder="+62 (home or mobile number)">
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/belanda.png" alt=""><span class="inline f-bold m-l-md text-md">Belanda</span></div>
               </div>
-              <div class="boxing email b m-t-md pull-left">
-                <label class="block text-xs">Email</label>
-                <input type="text" value="Anissa@gmail.com">
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/belgia.png" alt=""><span class="inline f-bold m-l-md text-md">Belgia</span></div>
               </div>
-              <div class="clearfix"></div>
-              <div class="dashed m-t-xl m-b-xl"></div>
-              <h4 class="section-title m-b-lg text-c-l text-left text-rounded">Tour&nbsp;<span class="text-yellow">Participants</span></h4>
-              <div class="block participants">
-                <div class="adult pull-left m-r-lg"><span class="label inline">Adult</span><span class="bg-white pos-rlt increase"><i class="ico ico-left"></i></span><span class="inline bg-white pos-rlt"><i class="ico ico-adult"></i>
-                    <input type="text" value="1" size="1" maxlength="1" readonly="readonly"></span><span class="bg-white pos-rlt decrease"><i class="ico ico-right"></i></span></div>
-                <div class="child pull-left m-r-lg"><span class="label inline">Child</span><span class="bg-white pos-rlt increase"><i class="ico ico-left"></i></span><span class="inline bg-white pos-rlt"><i class="ico ico-child"></i>
-                    <input type="text" value="0" size="1" maxlength="1" readonly="readonly"></span><span class="bg-white pos-rlt decrease"><i class="ico ico-right"></i></span></div>
-                <div class="infant pull-left m-r-lg"><span class="label inline">Infant</span><span class="bg-white pos-rlt increase"><i class="ico ico-left"></i></span><span class="inline bg-white pos-rlt"><i class="ico ico-baby"></i>
-                    <input type="text" value="0" size="1" maxlength="1" readonly="readonly"></span><span class="bg-white pos-rlt decrease"><i class="ico ico-right"></i></span></div>
-                <div class="clearfix"></div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/inggris.png" alt=""><span class="inline f-bold m-l-md text-md">Inggris</span></div>
               </div>
-              <div class="dashed m-t-xl m-b-xl"></div>
-              <h4 class="section-title m-b-lg text-c-l text-left text-rounded">Tour&nbsp;<span class="text-yellow">Preferences</span></h4>
-              <div class="boxing departure b m-b-md m-r-sm pull-left">
-                <label class="block text-xs">Departure</label>
-                <div class="pos-rlt chooseDate">
-                  <input type="text" readonly="readonly" class="date">
-                </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/china.png" alt=""><span class="inline f-bold m-l-md text-md">China</span></div>
               </div>
-              <div class="pull-left pos-rlt bg-white"><i class="ico ico-switch block m-t-md switch-date"></i></div>
-              <div class="boxing return b m-b-md m-l-sm pull-left pos-rlt">
-                <label class="block text-xs">Return</label>
-                <div class="pos-rlt chooseDate">
-                  <input type="text" readonly="readonly" class="date">
-                </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/denmark.png" alt=""><span class="inline f-bold m-l-md text-md">Denmark</span></div>
               </div>
-              <div class="clearfix"></div>
-              <div class="boxing airline b m-t-md pull-left">
-                <label class="block text-xs">Preferred Airline</label>
-                <input type="text" value="Garuda Indonesia">
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/finland.png" alt=""><span class="inline f-bold m-l-md text-md">Finland</span></div>
               </div>
-              <div class="clearfix"></div>
-              <div class="dashed m-t-xl m-b-xl"></div>
-              <div class="boxing message b m-t-md m-b-lg pull-left">
-                <label class="block text-xs">Let us know if there’s any other comments or requests about this booking</label>
-                <textarea placeholder="Type Message" class="message"></textarea>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/france.png" alt=""><span class="inline f-bold m-l-md text-md">France</span></div>
               </div>
-              <div class="clearfix"></div>
-              <button type="submit" class="btn btn-primary btn-submit pull-right m-b-lg">Make Booking</button>
-              <div class="clearfix m-b-xl"></div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/germany.png" alt=""><span class="inline f-bold m-l-md text-md">Germany</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/greece.png" alt=""><span class="inline f-bold m-l-md text-md">Greece</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/hungary.png" alt=""><span class="inline f-bold m-l-md text-md">Hungary</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/italy.png" alt=""><span class="inline f-bold m-l-md text-md">Italy</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/norway.png" alt=""><span class="inline f-bold m-l-md text-md">Norway</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/polandia.png" alt=""><span class="inline f-bold m-l-md text-md">Polandi</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/portugal.png" alt=""><span class="inline f-bold m-l-md text-md">Portugal</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/slovakia.png" alt=""><span class="inline f-bold m-l-md text-md">Slovakia</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/spanyol.png" alt=""><span class="inline f-bold m-l-md text-md">Spanyol</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/swedia.png" alt=""><span class="inline f-bold m-l-md text-md">Swedia</span></div>
+              </div>
+              <div class="col-md-4 m-b-md">
+                <div class="flag-item"><img src="img/flag/swiss.png" alt=""><span class="inline f-bold m-l-md text-md">Swiss</span></div>
+              </div>
             </div>
-          </form>
-        </div>
-        <div class="aside display-cell p-t-70">
-          <h5 class="m-t-xs m-b-lg text-rounded">Tour Details</h5>
-          <ul class="list-unstyled tour-ticket">
-            <li class="text-center"><span class="block">The Best</span><span class="block">Of West Europe</span></li>
-            <li class="bg-light bg-white"><i class="ico ico-departure"></i><span class="inline">Kamis, 12 Feb ‘15</span></li>
-            <li class="bg-light bg-white"><i class="ico ico-return"></i><span class="inline">Minggu, 22 Feb ‘15</span></li>
-            <li class="bg-white"><i class="ico ico-time"></i><span class="inline">10 Days</span></li>
-            <li class="bg-white"><i class="ico ico-airline-circle"></i><span class="inline">Garuda Indonesia</span></li>
-            <li class="bg-white"><i class="ico ico-adult"></i><span class="inline"><span id="count-adult">2</span> Person</span></li>
-          </ul>
-          <ul class="list-unstyled tour-pricing m-t-lg">
-            <li><span class="block">Total Price</span></li>
-            <li><span class="block gray text-u-c">2 Adults Twin Share</span><span class="block light">2 x USD 3000</span><strong class="block">$ 6000</strong></li>
-            <li><span class="block gray text-u-c">Indonesia Airport Tax</span><span class="block light">2 x Rp 100,000</span><strong class="block">Rp 200,000</strong></li>
-            <li><span class="block gray text-u-c">International Airport Tax</span><span class="block light">2 x USD 500</span><strong class="block">USD 1000</strong></li>
-            <li><span class="block gray text-u-c">Total Price</span><span class="block text-primary pricing"><span class="currency">USD</span><span class="price"><span>$</span><span class="number">7020</span></span></span></li>
-          </ul>
-          <p class="m-t-lg">Pihak Tour tetap dapat meng-update harga. Harga final akan Anda dapatkan langsung dari Customer Service kami</p>
+            <div class="clearfix"></div>
+            <div class="m-b-xl"></div>
+          </div>
+          <div class="aside display-cell">
+            <ul class="list-unstyled">
+              <li><a href="#" class="active">Visa</a></li>
+              <li><a href="#">Passport</a></li>
+              <li><a href="#">Travel Insurance</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
