--- a/app/blog.html
+++ b/app/blog.html
@@ -62,7 +62,7 @@
               </div>
             </li>
             <li><a href="#hotels" class="hotel"><i class="ico ico-hotel"></i><span class="block">BOOK HOTELS</span></a></li>
-            <li><a href="#documents"><i class="ico ico-document"></i><span class="block">DOCUMENTS</span></a></li>
+            <li><a href="document.html"><i class="ico ico-document"></i><span class="block">DOCUMENTS</span></a></li>
             <li class="active"><a href="blog.html"><i class="ico ico-blog"></i><span class="block">BLOG</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
