login form with modal

--- a/app/flight-payment-step-1.html
+++ b/app/flight-payment-step-1.html
@@ -370,6 +370,34 @@
         <div class="pull-right"><a href="#" class="text-u-c">Privacy Policy</a><span class="inline m-r-sm m-l-sm">-</span><a href="#" class="text-u-c">Terms &amp; Conditions</a><span class="inline m-r-sm m-l-sm">-</span><a href="#" class="text-u-c">Carreer</a><span class="inline m-r-sm m-l-sm">-</span><span class="text-dark-light text-u-c m-r-sm">Share</span><a href="#" target="_blank" class="m-r-sm ico ico-fb">FB</a><a href="#" target="_blank" class="m-r-sm ico ico-tw">TW</a></div>
       </div>
     </div>
+    <div id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <h6 class="text-lg f-bold text-u-c text-center">Login to your account</h6>
+            <form class="sapta-form">
+              <div class="form-group m-b-md">
+                <div class="boxing b">
+                  <label for="InputEmail">Email Address</label>
+                  <input id="InputEmail" type="email" placeholder="Enter email" class="form-control">
+                </div>
+              </div>
+              <div class="form-group m-b-lg">
+                <div class="boxing b">
+                  <label for="InputPassword">Password</label>
+                  <input id="InputPassword" type="password" placeholder="Password" class="password form-control">
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary btn-lg m-auto">Submit</button>
+            </form>
+          </div>
+          <div class="modal-footer"><a href="register.html" class="inline">Register New Account</a><span class="inline m-r-sm m-l-sm">|</span><a href="#" class="inline">Forgot Password?</a></div>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/bootstrap.js"></script>
