--- a/app/tours.html
+++ b/app/tours.html
@@ -66,7 +66,7 @@
             <li><a href="blog.html"><i class="ico ico-blog"></i><span class="block">BLOG</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="login.html" class="b-r-white">Login</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#loginModal" class="b-r-white">Login</a></li>
             <li><a href="register.html">Register</a></li>
           </ul>
         </div>
@@ -374,6 +374,34 @@
       <div class="container">
         <div class="pull-left"><span class="text-u-c">&copy; 2015 COPYRIGHT Sapta tours. ALL RIGHTS RESERVED.</span></div>
         <div class="pull-right"><a href="#" class="text-u-c">Privacy Policy</a><span class="inline m-r-sm m-l-sm">-</span><a href="#" class="text-u-c">Terms &amp; Conditions</a><span class="inline m-r-sm m-l-sm">-</span><a href="#" class="text-u-c">Carreer</a><span class="inline m-r-sm m-l-sm">-</span><span class="text-dark-light text-u-c m-r-sm">Share</span><a href="#" target="_blank" class="m-r-sm ico ico-fb">FB</a><a href="#" target="_blank" class="m-r-sm ico ico-tw">TW</a></div>
+      </div>
+    </div>
+    <div id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <h6 class="text-lg f-bold text-u-c text-center">Login to your account</h6>
+            <form class="sapta-form">
+              <div class="form-group m-b-md">
+                <div class="boxing b">
+                  <label for="InputEmail">Email Address</label>
+                  <input id="InputEmail" type="email" placeholder="Enter email" class="form-control">
+                </div>
+              </div>
+              <div class="form-group m-b-lg">
+                <div class="boxing b">
+                  <label for="InputPassword">Password</label>
+                  <input id="InputPassword" type="password" placeholder="Password" class="password form-control">
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary btn-lg m-auto">Submit</button>
+            </form>
+          </div>
+          <div class="modal-footer"><a href="register.html" class="inline">Register New Account</a><span class="inline m-r-sm m-l-sm">|</span><a href="#" class="inline">Forgot Password?</a></div>
+        </div>
       </div>
     </div>
   </body>
